science wow.cydsn/REBUILD.log
--------------- Rebuild Started: 07/20/2022 15:26:05 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I..\HindsightCAN-master -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -DCHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:138:28: error: 'milliseconds' undeclared (first use in this function)
             if (time_ms && milliseconds > time_ms) {
                            ^
main.c:138:28: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 07/20/2022 15:26:05 ---------------
